fix(_pera-onramp-modal-wrapper): add overflow-y:auto to wrapper class

--- a/src/modal/pera-onramp-modal/_pera-onramp-modal-wrapper.scss
+++ b/src/modal/pera-onramp-modal/_pera-onramp-modal-wrapper.scss
@@ -11,6 +11,8 @@
   width: 100vw;
   min-height: calc(100 * var(--vh));
 
+  overflow-y: auto;
+
   background-color: rgba(0, 0, 0, 0.7);
 }
 
